# protein

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  render.yaml  vercel.json
.github/workflows/: ci.yml
backend/: alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  exception_handlers.py  main.py
backend/app/api/: bioinformatics.py  chemoinformatics.py  genomics.py  health.py  ml_inference.py
backend/app/models/: pydantic_models.py  schema.py
backend/app/services/bioinformatics/: __init__.py  models.py  service.py  utils.py
backend/app/services/chemoinformatics/: __init__.py  descriptors.py  service.py
backend/app/services/data/: __init__.py  cache.py  db.py  models.py
backend/app/services/genomics/: __init__.py  service.py
backend/app/services/ml_inference/: embeddings.py  service.py
backend/app/utils/: constants.py  logger.py  validators.py
backend/tests/: conftest.py  test_api.py  test_bioinformatics.py  test_chemoinformatics.py
docker/: postgres.dockerfile  postgresql.conf  redis-entrypoint.sh  redis.conf  redis.dockerfile
docker/initdb/: 01_init.sql
docs/: README.md  api.md  architecture.md  deployment.md  setup.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/analysis/: page.tsx
frontend/app/(dashboard)/evidence/: page.tsx
frontend/app/(dashboard)/models/: page.tsx
frontend/app/(dashboard)/omics/: page.tsx
frontend/components/: AnalysisPanel.tsx  EvidencePanel.tsx  ExplainabilityPanel.tsx  ModelPanel.tsx  OmicsPanel.tsx  ResultsVisualizer.tsx  SequenceInput.tsx
frontend/components/ui/: button.tsx  tabs.tsx  toaster.tsx
frontend/hooks/: useAnalysis.ts  useFetch.ts
frontend/lib/: api.ts  constants.ts  types.ts  utils.ts
frontend/store/: analysisStore.ts
scripts/: setup.sh  start.sh  test.sh
