[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Project metadata
# =============================================================================
[project]
name = "protein-platform"
version = "1.0.0"
description = "Bioinformatics & Chemoinformatics platform for protein structure analysis, ligand discovery, and knowledge-graph-driven research."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Protein Platform Contributors" }]
keywords = ["bioinformatics", "chemoinformatics", "protein", "fastapi", "rdkit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Cache / broker
    "redis[hiredis]>=5.0.4",
    "celery[redis]>=5.4.0",
    "kombu>=5.3.5",

    # Graph database
    "neo4j>=5.20.0",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.7.1",
    "pydantic-settings>=2.3.0",

    # Bioinformatics
    "biopython>=1.83",

    # Chemoinformatics
    "rdkit>=2024.3.1",

    # Numerics / ML helpers
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "pandas>=2.2.2",

    # HTTP client
    "aiohttp>=3.9.5",
    "tenacity>=8.3.0",

    # Serialisation
    "orjson>=3.10.3",
    "msgpack>=1.0.8",

    # Observability
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.2.0",
    "black>=24.4.2",
    "isort>=5.13.2",
    "ruff>=0.4.5",
    "mypy>=1.10.0",
    "types-redis>=4.6.0.20240425",
    "types-passlib>=1.7.7.20240327",
    "sqlalchemy[mypy]>=2.0.30",
    "pre-commit>=3.7.1",
]

[project.scripts]
protein-server = "protein.main:run"
protein-worker = "protein.worker:run"

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=protein",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "unit: fast, dependency-free unit tests",
    "integration: tests that require live services (db, redis, …)",
    "e2e: end-to-end API tests",
    "slow: tests that take more than a second",
    "bioinformatics: tests covering bio-specific logic",
    "chemoinformatics: tests covering chemo-specific logic",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:biopython",
    "ignore::DeprecationWarning:rdkit",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Black
# =============================================================================
[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# =============================================================================
# isort
# =============================================================================
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["protein"]
known_third_party = [
    "fastapi", "sqlalchemy", "pydantic", "celery",
    "redis", "neo4j", "biopython", "rdkit", "numpy",
    "pandas", "aiohttp", "httpx", "structlog",
]
skip_glob = ["migrations/*", "alembic/*"]

# =============================================================================
# mypy
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "rdkit.*",
    "Bio.*",
    "celery.*",
    "kombu.*",
    "prometheus_client.*",
    "msgpack.*",
    "orjson.*",
]
ignore_missing_imports = true

# =============================================================================
# Ruff (fast linter)
# =============================================================================
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".eggs", ".git", ".mypy_cache", ".ruff_cache", ".tox",
    ".venv", "venv", "build", "dist", "migrations",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "PT",  # flake8-pytest-style
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN"]
"alembic/**/*.py" = ["ANN", "N999"]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
branch = true
source = ["protein"]
omit = [
    "*/migrations/*",
    "*/alembic/*",
    "*/tests/*",
    "protein/main.py",
    "protein/worker.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
